[metadata]
name = shipyard
summary = Directed acyclic graph controller for Kubernetes and OpenStack control plane life cycle management
description-file = README.md

author = undercloud team
home-page = https://github.com/att-comdev/shipyard
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    shipyard_airflow
    shipyard_client

[entry_points]
oslo.config.opts =
    shipyard_airflow = shipyard_airflow.conf.opts:list_opts
oslo.policy.policies =
    shipyard_airflow = shipyard_airflow.policy:list_policies
console_scripts =
    shipyard = shipyard_client.cli.commands:shipyard
    upgrade_db = shipyard_airflow.shipyard_upgrade_db:upgrade_db

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = docs/build/html
