[metadata]
name = shipyard client
summary = Shipyard client library and CLI
description-file = README.md

author = undercloud team
home-page = https://github.com/att-comdev/shipyard/shipyard_client
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[build_sphinx]
warning-is-error = True
